--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,6 @@
         "**/package-lock.json": true,
         "**/dist": true,
         "**/.gitignore": true
-    }
+    },
+    "editor.wordBasedSuggestions": true
 }
