--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,5 @@
         "**/dist": true,
         "**/.gitignore": true
     },
-    "editor.wordBasedSuggestions": true
+    "editor.wordBasedSuggestions": "matchingDocuments"
 }
