🐛 Button en grèves, Funa en trève
Back to 1.3.6 of CraftLaunchCore

--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
     "name": "democraft-launcher",
     "preductname": "DEMOCRAFT Launcher",
-    "version": "0.1.5",
+    "version": "0.1.6",
     "description": "Launcher Mincraft custom (crack, premium)",
     "main": "src/app.js",
     "author": "Funasitien",
     "url": "https://launcher.democraft.fr",
     "engines": {
-        "node": "^18.x.x"
+        "node": ">18.x.x"
     },
     "scripts": {
         "start": "cross-env-shell NODE_ENV=dev electron .",
@@ -20,14 +20,14 @@
         "ext": "js,html,css"
     },
     "dependencies": {
-        "electron-updater": "^6.1.1",
-        "minecraft-java-core": "^3.6.2",
-        "node-fetch": "^2.6.13"
+        "electron-updater": "^6.1.4",
+        "minecraft-java-core": "^3.8.1",
+        "node-fetch": "^2.7.0"
     },
     "devDependencies": {
         "cross-env": "^7.0.3",
-        "electron": "^26.0.0",
-        "electron-builder": "^24.6.3",
+        "electron": "^27.0.4",
+        "electron-builder": "^24.6.4",
         "jimp": "^0.22.10",
         "nodemon": "^3.0.1",
         "png2icons": "^2.0.1"
