--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
     "name": "democraft-launcher",
     "preductname": "DEMOCRAFT Launcher",
-    "version": "0.1.6",
+    "version": "0.1.7",
     "description": "Launcher Mincraft custom (crack, premium)",
     "main": "src/app.js",
     "author": "Funasitien",
-    "url": "https://launcher.democraft.fr",
+    "url": "http://launcher.democraft.fr",
     "engines": {
         "node": ">18.x.x"
     },
