--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
     "name": "democraft-launcher",
     "preductname": "DEMOCRAFT Launcher",
     "version": "0.1.7",
-    "description": "Launcher Mincraft custom (crack, premium)",
+    "description": "Launcher Minecraft custom (crack, premium)",
     "main": "src/app.js",
-    "author": "Funasitien",
-    "url": "http://launcher.democraft.fr",
+    "author": "luuxis, Funasitien, Inc.",
+    "url": "https://github.com/luuxis",
     "engines": {
         "node": ">18.x.x"
     },
